WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39761
TemporaryLinkStubsQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39761
Summary
TemporaryLinkStubsQt.cpp has coding-style errors
Anders Bakken
Reported
2010-05-26 13:25:46 PDT
WebCore/platform/qt/TemporaryLinkStubsQt.cpp:35: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:37: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:43: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:46: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:47: "Cursor.h" already included at WebCore/platform/qt/TemporaryLinkStubsQt.cpp:39 [build/include] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:49: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:51: "GraphicsContext.h" already included at WebCore/platform/qt/TemporaryLinkStubsQt.cpp:46 [build/include] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:53: "IntPoint.h" already included at WebCore/platform/qt/TemporaryLinkStubsQt.cpp:44 [build/include] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:56: "loader.h" already included at WebCore/platform/qt/TemporaryLinkStubsQt.cpp:48 [build/include] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:57: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:69: "Widget.h" already included at WebCore/platform/qt/TemporaryLinkStubsQt.cpp:45 [build/include] [4] WebCore/platform/qt/TemporaryLinkStubsQt.cpp:72: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 12 in 1 files
Attachments
Patch that fixes the coding style issues
(1.74 KB, patch)
2010-05-26 14:34 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(1.80 KB, patch)
2010-06-04 18:37 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-05-26 14:34:08 PDT
Created
attachment 57141
[details]
Patch that fixes the coding style issues
David Levin
Comment 2
2010-05-26 18:16:13 PDT
"No new tests. (OOPS!)" issue again.
Petri Ojala
Comment 3
2010-05-26 21:41:30 PDT
QtTriaged
Anders Bakken
Comment 4
2010-06-04 18:37:39 PDT
Created
attachment 57935
[details]
Patch
Eric Seidel (no email)
Comment 5
2010-06-04 22:14:37 PDT
Comment on
attachment 57935
[details]
Patch I wonder if all these includes are still needed. The Qt port is mature enough it shouldn't really have a TemporaryLinkStubs file anymore.
WebKit Commit Bot
Comment 6
2010-06-04 22:27:51 PDT
Comment on
attachment 57935
[details]
Patch Clearing flags on attachment: 57935 Committed
r60734
: <
http://trac.webkit.org/changeset/60734
>
WebKit Commit Bot
Comment 7
2010-06-04 22:27:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug