2010-06-04  Anders Bakken  <agbakken@gmail.com>

Reviewed by Eric Seidel.

        TemporaryLinkStubsQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39761

        * platform/qt/TemporaryLinkStubsQt.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@60734 bbb929c8-8fbe-4397-9dbb-9b2b20218538