third_party/WebKit/WebCore/platform/qt/TemporaryLinkStubsQt.cpp
@@ -34,27 +34,21 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 
 #include "AXObjectCache.h"
-#include "DNS.h"
 #include "CachedResource.h"
 #include "CookieJar.h"
 #include "Cursor.h"
+#include "DNS.h"
+#include "FTPDirectoryDocument.h"
+#include "FileSystem.h"
 #include "Font.h"
 #include "Frame.h"
 #include "FrameLoader.h"
-#include "FTPDirectoryDocument.h"
-#include "IntPoint.h"
-#include "Widget.h"
-#include "GraphicsContext.h"
-#include "Cursor.h"
-#include "loader.h"
-#include "FileSystem.h"
 #include "FrameView.h"
 #include "GraphicsContext.h"
 #include "IconLoader.h"
 #include "IntPoint.h"
 #include "KURL.h"
 #include "Language.h"
-#include "loader.h"
 #include "LocalizedStrings.h"
 #include "Node.h"
 #include "NotImplemented.h"
@@ -68,9 +62,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "SystemTime.h"
 #include "TextBoundaries.h"
 #include "Widget.h"
+#include "loader.h"
+
+#include <float.h>
 #include <stdio.h>
 #include <stdlib.h>
-#include <float.h>
 #include <wtf/text/CString.h>
 
 using namespace WebCore;
